[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_pub_sub_project"  # Replace with your project name
version = "0.1.0"  # Adjust as needed
description = "A pub/sub system using langgraph"  # Provide a description
authors = [{name = "Your Name", email = "your.email@example.com"}]  # Replace with your info
readme = "README.md"  # Create a README.md file if you don't have one
requires-python = ">=3.7"  # Specify the minimum Python version

dependencies = [
    "langgraph",
    "ipython",
    # Add any other dependencies you discover in the full code
]

[project.optional-dependencies]
dev = ["pytest", "black", "uv"]  # Example development dependencies

[tool.setuptools]
packages = { find = { where = ["src"] } }
